--- a/styles/layout/history.css
+++ b/styles/layout/history.css
@@ -34,7 +34,7 @@
                 justify-content: center;
                 align-items: center;
                 background-color: inherit;
-                color: var(--color-text-muted);
+                color: var(--color-text-light);
 
                 img {
                     width: 60%;
